[package]
name = "totp-embed"
version = "1.0.3"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"
description = "A simple, correct TOTP library."
homepage = "https://github.com/fosskers/totp-lite"
repository = "https://github.com/fosskers/totp-lite"
readme = "README.md"
license = "MIT"
keywords = ["authentication", "totp", "otp", "2fa", "no_std", "embedded"]
categories = ["authentication"]

[badges]
github = { repository = "fosskers/totp-lite", branch = "master", workflow = "Rust" }

[dependencies]
digest = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
sha-1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }

[features]
default = ["std"]
std = ["hmac/std", "digest/std", "sha-1/std", "sha2/std"]

[dev-dependencies]
version-sync = "0.9"
koibumi-base32 = "0.0"
