[package]
name = "totp_embed"
version = "1.0.3"
authors = ["Colin Woodbury <colin@fosskers.ca>", "M4tsuri <me@m4tsuri.com>"]
edition = "2021"
description = "A fork of totp-lite for embedded environment."
homepage = "https://github.com/M4tsuri/totp_embed"
repository = "https://github.com/M4tsuri/totp_embed"
readme = "README.md"
license = "MIT"
keywords = ["totp", "otp", "2fa", "no_std", "embedded"]
categories = ["authentication"]

[badges]
github = { repository = "M4tsuri/totp_embed", branch = "master", workflow = "Rust" }

[dependencies]
digest = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
sha-1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }

[features]
default = ["std"]
std = ["hmac/std", "digest/std", "sha-1/std", "sha2/std"]

[dev-dependencies]
version-sync = "0.9"
koibumi-base32 = "0.0"
